--- a/knoppen.html
+++ b/knoppen.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <a href="blog.html">
-<button class="btn">back</button
+ <button class="btn">back</button>
 </a>
 </body>
 </html>
